<resources>
    <string name="app_name" translatable="false">Dana Flash</string>
    <string name="empty_string" translatable="false" />
    <string name="facebook_app_id" translatable="false">1515415615</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="title_home">Home</string>
    <string name="title_personal">Personal</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="settings">Pengaturan</string>
    <string name="plz_input_phone"><font size="14">Input No Handphone</font></string>
    <string name="plz_input_verification_code"><font size="14">Input Kode Verfikasi</font></string>
    <string name="get_verification_code">Kirim Kode Verifikasi</string>
    <string name="login">Login</string>
    <string name="confirm">Keluar</string>
    <string name="cancel">Batal</string>
    <string name="loan_amount_colon">Jumlah Pinjaman:</string>
    <string name="bank_account_no_colon">No Rekening Bank:</string>
    <string name="paid_in_full_colon">Jumlah Yang harus dilunasi:</string>
    <string name="order_status_all">Semua</string>
    <string name="order_status_loan_success">Pencairan Berhasil</string>
    <string name="submit">Ajukan</string>
    <string name="other_info">Informasi Tambahan</string>
    <string name="base_info">Informasi Umum</string>
    <string name="order_status_pushing">Pengajuan Diproses</string>
    <string name="order_status_audit_failed">Pengajuan ditolak</string>
    <string name="order_status_apply_failed">Pengajuan Gagal</string>
    <string name="order_status_repaymenting">Belum Lunas</string>
    <string name="order_status_overdue">Sudah Jatuh Tempo</string>
    <string name="order_status_repaymented">Pinjaman Lunas</string>
    <string name="i_want_to_extend">Saya Ingin Perpanjang</string>
    <string name="i_want_to_repay">Saya Ingin Melunasi</string>
    <string name="borrow_another_order">Pinjam Kembali</string>
    <string name="payment_deadline_colon">Batas Tanggal Pelunasan:</string>
    <string name="product_detail">Detail Produk</string>
    <string name="sing_out">Keluar</string>
    <string name="register_protocol">Perjanjian Pendaftaran Pengguna</string>
    <string name="login_protocol_declare">Dengan login berarti anda setuju dengan semua\n Kebijakan privasi Dana Flash</string>
    <string name="failed_to_login">Login Gagal</string>
    <string name="retry">Mencoba kembali</string>
    <string name="feedback_success">Pengajuan Berhasil</string>
    <string name="month">Bulan</string>
    <string name="day">Hari</string>
    <string name="complete">Sudah Lengkap</string>
    <string name="prompt">Notifikasi</string>
    <string name="liveness_blink">Silakan berkedip</string>
    <string name="liveness_mouse">Mohon buka dan tutup mulut Anda</string>
    <string name="liveness_pos_raw">Silakan tengok kiri atau kanan (&lt;30 derajat)</string>
    <string name="liveness_hold_phone_vertical">Mohon pegang telepon dengan tegak</string>
    <string name="liveness_weak_light">Mohon temukan tempat yang lebih terang</string>
    <string name="liveness_too_light">Mohon temukan tempat yang lebih gelap</string>
    <string name="liveness_no_camera_permission">Kamera tidak dinyalakan, silakan aktifkan izin menyalakan kamera</string>
    <string name="liveness_perform">Oke</string>
    <string name="liveness_cancel">Batalkan</string>
    <string name="liveness_try_again">Pakai Lagi</string>
    <string name="liveness_detection_success">Deteksi liveness sukses</string>
    <string name="liveness_detection_fail">Deteksi Liveness gagal, silakan coba lagi</string>
    <string name="liveness_time_out">Waktu habis</string>
    <string name="liveness_move_face_center">Sesuaikan wajah Anda ke tengah bingkai yang tersedia</string>
    <string name="liveness_still">Jangan bergerak dan mulai pengecekan</string>
    <string name="liveness_frontal">Mohon lihat lurus ke layar</string>
    <string name="liveness_no_people_face">Silakan masukkan wajah Anda dalam bingkai</string>
    <string name="liveness_auth_check">Mohon Tunggu</string>
    <string name="liveness_tip_move_closer">Silakan dekatkan wajah Anda ke layar</string>
    <string name="liveness_tip_move_furthre">Silakan gerakkan wajah Anda lebih jauh dari layar</string>
    <string name="liveness_device_not_support">Perangkat tidak mendukung pendeteksi citra wajah</string>
    <string name="liveness_failed_reason_timeout">Waktu habis, silakan ikuti instruksi</string>
    <string name="liveness_failed_reason_facemissing_blink_mouth">Wajah tidak terdeteksi, jangan bergerak terlalu cepat dan cari tempat dengan cahaya yang cukup</string>
    <string name="liveness_failed_reason_facemissing_pos_yaw">Wajah tidak terdeteksi, jangan bergerak terlalu cepat dan guncangkan kepala berlebihan (> 45 derajat)</string>
    <string name="liveness_failed_reason_multipleface">Beberapa wajah terdeteksi</string>
    <string name="liveness_failed_reason_muchaction">Banyak gerakan terdeteksi</string>
    <string name="liveness_failed_reason_auth_failed">Otorisasi gagal, mohon cek jaringan Anda</string>
    <string name="liveness_failed_reason_bad_network">Mohon cek jaringan Anda</string>
    <string name="to_fill_in">Lengkapi Info</string>
    <string name="to_fix">Mohon Perbaiki</string>
    <string name="detection_failed_need_service">Tes Gagal, Mohon untuk Hubungi CS</string>
    <string name="my_orders">Pinjaman Saya</string>
    <string name="all_orders">Semua</string>
    <string name="to_repayment_orders">Belum Lunas</string>
    <string name="paid_orders">Pinjaman Lunas</string>
    <string name="feedback">Feedback</string>
    <string name="version">Versi</string>
    <string name="reacquire">Kirim Kode Ulang</string>
    <string name="failed_to_get_verify_code">Verifikasi Kode Gagal</string>
    <string name="dismatch_phone_with_first_not_8">Masukkan 9 sampai 13 angka ,di awali angka 8</string>
    <string name="update_now">Segera Perbarui</string>
    <string name="new_version_detect_and_update">Update Versi Terbaru</string>
    <string name="your_app_is_newest">Aplikasi Anda sudah versi paling baru</string>
    <string name="failed_to_download">Unduhan Gagal</string>
    <string name="download_success">Unduhan Berhasil</string>
    <string name="update_download_progress">Sudah Diunduh %d</string>
    <string name="failed_to_donwload_in_google_store">Akses Gagal, Mohon ulangi kembali</string>
    <string name="fill_information">Isi Data</string>
    <string name="online_loan">Pinjaman Online</string>
    <string name="order_number_colon">Nomor Pinjaman:</string>
    <string name="loan_term_colon">Tenor Pinjaman:</string>
    <string name="loading">Memuat</string>
    <string name="back">Coba lagi</string>
    <string name="refresh">kembali</string>
    <string name="content_empty">Tidak ada konten lagi~</string>
    <string name="feedback_failed">Pengajuan Gagal, Mohon Ajukan Ulang</string>
    <string name="failed_to_open_camera_without_permission">Izinkan akses kamera untuk lanjut</string>
    <string name="rebind_card">Perbaiki Informasi</string>
    <string name="derating_confirm">Konfirmasi Limit Pinjaman</string>
    <string name="order_status_checked">Belum Konfirmasi</string>
    <string name="order_status_audit_success">Verifikasi Lolos</string>
    <string name="order_status_canceled">Pengajuan dibatalkan</string>
    <string name="order_status_verification_failed">Verifikasi Gagal</string>
    <string name="order_status_loan_failed">Pencairan Gagal</string>
    <string name="order_status_manual_audit">Pengajuan Diproses</string>
    <string name="order_app_status_order_cancel">Pinjaman Dibatalkan</string>
    <string name="derating_success">Konfirmasi Pinjaman Berhasil</string>
    <string name="failed_to_derating">Konfirmasi Pinjaman Gagal</string>
    <string name="liveness">Verifikasi Wajah</string>
    <string name="contact">Nomor Ponsel</string>
    <string name="failed_to_load">Memuat Gagal</string>
    <string name="loan_now">Lengkapi data</string>
    <string name="download">Download</string>
</resources>