<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/pic_personal_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            tools:text="UserName" />

        <TextView
            android:id="@+id/to_my_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="@string/my_orders"
            android:textColor="@color/dana_red"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_bg" />

        <TextView
            android:id="@+id/all_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_personal_order_item"
            android:drawablePadding="11dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="14dp"
            android:text="@string/all_orders"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_order_all"
            app:layout_constraintEnd_toStartOf="@id/to_repay_order"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/to_my_order" />

        <TextView
            android:id="@+id/to_repay_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_personal_order_item"
            android:drawablePadding="11dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:text="@string/to_repayment_orders"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_order_to_repayment"
            app:layout_constraintEnd_toStartOf="@id/paid_order"
            app:layout_constraintStart_toEndOf="@id/all_order"
            app:layout_constraintTop_toBottomOf="@id/to_my_order" />

        <TextView
            android:id="@+id/paid_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/shape_personal_order_item"
            android:drawablePadding="11dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="14dp"
            android:text="@string/paid_orders"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_order_paid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/to_repay_order"
            app:layout_constraintTop_toBottomOf="@id/to_my_order" />

        <com.ecreditpal.danaflash.widget.SettingItem
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/ripple_personal_setting_item"
            android:text="@string/faq"
            app:layout_constraintTop_toBottomOf="@id/all_order"
            app:siStartIcon="@drawable/ic_faq"
            app:siTitle="@string/faq" />

        <com.ecreditpal.danaflash.widget.SettingItem
            android:id="@+id/feedback"
            clickNav="@{@id/action_navigation_personal_to_feedbackActivity}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/ripple_personal_setting_item"
            app:layout_constraintTop_toBottomOf="@id/faq"
            app:siStartIcon="@drawable/ic_feedback"
            app:siTitle="@string/feedback" />

        <com.ecreditpal.danaflash.widget.SettingItem
            android:id="@+id/settings"
            clickNav="@{@id/action_navigation_personal_to_settingsActivity}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/ripple_personal_setting_item"
            app:layout_constraintTop_toBottomOf="@id/feedback"
            app:siStartIcon="@drawable/ic_settings"
            app:siTitle="@string/settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>